--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/nprogress.css" />
     <link rel="stylesheet" href="css/react-slider.css" />
+    <link rel="stylesheet" href="css/app.css" />
     <script src="lib/react-with-addons.js"></script>
     <script src="lib/react-dom.js"></script>
     <script src="lib/babel.js"></script>
@@ -16,6 +17,7 @@
     <div id="content" class="container-fluid" style="height: 100%"></div>
     <script type="text/javascript" src="lib/nprogress.js"></script>
     <script type="text/javascript" src="lib/lodash.js"></script>
+    <script type="text/javascript" src="lib/Chart.js"></script>
     <script type="text/javascript" src="lib/react-chartjs.js"></script>
     <script type="text/javascript" src="lib/sql.js"></script>
     <script type="text/javascript" src="lib/squel-basic.js"></script>
@@ -24,6 +26,8 @@
     <script type="text/babel" src="src/app.jsx"></script>
     <script type="text/babel" src="src/filter.jsx"></script>
     <script type="text/babel" src="src/stats.jsx"></script>
+    <script type="text/babel" src="src/chart.jsx"></script>
+    <script type="text/babel" src="src/table.jsx"></script>
     <script type="text/javascript" src="src/utilities.js"></script>
   </body>
 </html>
