Prototyping support for react-grid-layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/nprogress.css" />
     <link rel="stylesheet" href="css/react-slider.css" />
+    <link rel="stylesheet" href="css/react-grid-layout.css" />
     <link rel="stylesheet" href="css/app.css" />
     <script src="lib/react-with-addons.js"></script>
     <script src="lib/react-dom.js"></script>
@@ -15,6 +16,7 @@
   </head>
   <body style="height: 100%">
     <div id="content" class="container-fluid" style="height: 100%"></div>
+    <script type="text/javascript" src="lib/react-grid-layout.min.js"></script>
     <script type="text/javascript" src="lib/nprogress.js"></script>
     <script type="text/javascript" src="lib/lodash.js"></script>
     <script type="text/javascript" src="lib/Chart.js"></script>
