Added grid layout system

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script type="text/babel" src="src/stats.jsx"></script>
     <script type="text/babel" src="src/chart.jsx"></script>
     <script type="text/babel" src="src/table.jsx"></script>
+    <script type="text/babel" src="src/widgets.jsx"></script>
     <script type="text/javascript" src="src/utilities.js"></script>
   </body>
 </html>
