Added date range filtering and table/chart agregate

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/nprogress.css" />
     <link rel="stylesheet" href="css/react-slider.css" />
     <link rel="stylesheet" href="css/react-grid-layout.css" />
+    <link rel="stylesheet" href="css/react-datepicker.css" />
+    <link rel="stylesheet" href="css/tether.css" />
     <link rel="stylesheet" href="css/app.css" />
     <script src="lib/react-with-addons.js"></script>
     <script src="lib/react-dom.js"></script>
@@ -24,6 +26,12 @@
     <script type="text/javascript" src="lib/sql.js"></script>
     <script type="text/javascript" src="lib/squel-basic.js"></script>
     <script type="text/javascript" src="lib/react-slider.js"></script>
+    <script type="text/javascript" src="lib/moment.js"></script>
+    <script type="text/javascript" src="lib/classnames.js"></script>
+    <script type="text/javascript" src="lib/react-onclickoutside.js"></script>
+    <script type="text/javascript" src="lib/tether.js"></script>
+    <script type="text/javascript" src="lib/react-tether.js"></script>
+    <script type="text/babel" src="lib/react-datepicker.jsx"></script>
     <script type="text/babel" src="lib/react-checkbox-group.jsx"></script>
     <script type="text/babel" src="src/app.jsx"></script>
     <script type="text/babel" src="src/filter.jsx"></script>
