Changed sql to use web worked. Added loading indicator for widgets

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="lib/Chart.js"></script>
     <script type="text/javascript" src="lib/react-chartjs.js"></script>
     <script type="text/javascript" src="lib/sql.js"></script>
+    <script type="text/javascript" src="lib/worker.sql.js"></script>
     <script type="text/javascript" src="lib/squel-basic.js"></script>
     <script type="text/javascript" src="lib/react-slider.js"></script>
     <script type="text/javascript" src="lib/moment.js"></script>
@@ -31,6 +32,7 @@
     <script type="text/javascript" src="lib/react-onclickoutside.js"></script>
     <script type="text/javascript" src="lib/tether.js"></script>
     <script type="text/javascript" src="lib/react-tether.js"></script>
+    <script type="text/javascript" src="lib/q.js"></script>
     <script type="text/babel" src="lib/react-datepicker.jsx"></script>
     <script type="text/babel" src="lib/react-checkbox-group.jsx"></script>
     <script type="text/babel" src="src/app.jsx"></script>
