Refactoring to ES6+, webpack

--- a/index.html
+++ b/index.html
@@ -5,42 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Lightroom Catalog Reader</title>
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/nprogress.css" />
-    <link rel="stylesheet" href="css/react-slider.css" />
-    <link rel="stylesheet" href="css/react-grid-layout.css" />
-    <link rel="stylesheet" href="css/react-datepicker.css" />
-    <link rel="stylesheet" href="css/tether.css" />
-    <link rel="stylesheet" href="css/app.css" />
-    <script src="lib/react-with-addons.js"></script>
-    <script src="lib/react-dom.js"></script>
-    <script src="lib/babel.js"></script>
   </head>
   <body style="height: 100%">
     <div id="content" class="container-fluid" style="height: 100%"></div>
-    <script type="text/javascript" src="lib/react-grid-layout.min.js"></script>
-    <script type="text/javascript" src="lib/nprogress.js"></script>
-    <script type="text/javascript" src="lib/lodash.js"></script>
-    <script type="text/javascript" src="lib/Chart.js"></script>
-    <script type="text/javascript" src="lib/react-chartjs.js"></script>
-    <script type="text/javascript" src="lib/sql.js"></script>
-    <script type="text/javascript" src="lib/worker.sql.js"></script>
-    <script type="text/javascript" src="lib/squel-basic.js"></script>
-    <script type="text/javascript" src="lib/react-slider.js"></script>
-    <script type="text/javascript" src="lib/moment.js"></script>
-    <script type="text/javascript" src="lib/classnames.js"></script>
-    <script type="text/javascript" src="lib/react-onclickoutside.js"></script>
-    <script type="text/javascript" src="lib/tether.js"></script>
-    <script type="text/javascript" src="lib/react-tether.js"></script>
-    <script type="text/javascript" src="lib/q.js"></script>
-    <script type="text/babel" src="lib/react-datepicker.jsx"></script>
-    <script type="text/babel" src="lib/react-checkbox-group.jsx"></script>
-    <script type="text/babel" src="src/app.jsx"></script>
-    <script type="text/babel" src="src/filter.jsx"></script>
-    <script type="text/babel" src="src/stats.jsx"></script>
-    <script type="text/babel" src="src/chart.jsx"></script>
-    <script type="text/babel" src="src/table.jsx"></script>
-    <script type="text/babel" src="src/widgets.jsx"></script>
-    <script type="text/javascript" src="src/utilities.js"></script>
+    <script type="text/javascript" src="dist/bundle.js"></script>
   </body>
 </html>
