--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body style="height: 100%">
     <div id="content" class="container-fluid" style="height: 100%"></div>
-    <script type="text/javascript" src="dist/bundle.js"></script>
+    <script type="text/javascript" src="dist/js/bundle.js"></script>
   </body>
 </html>
