--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" style="height: 100%">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="css/bundle.css">
-    <title>Lightroom Catalog Reader</title>
-  </head>
-  <body style="height: 100%">
-    <div id="content" class="container-fluid" style="height: 100%"></div>
-    <script type="text/javascript" src="js/bundle.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/ReactJS-LightroomCatalog-Viewer/manifest.json"><link rel="shortcut icon" href="/ReactJS-LightroomCatalog-Viewer/favicon.ico"><title>Lightroom Catalog Viewer</title><link href="/ReactJS-LightroomCatalog-Viewer/static/css/main.93085466.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/ReactJS-LightroomCatalog-Viewer/static/js/main.6d2a00eb.js"></script></body></html>
