--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="%REACT_APP_CHROME%">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -21,12 +21,12 @@
     -->
     <title>Lightroom Catalog Viewer</title>
   </head>
-  <body>
+  <body class="%REACT_APP_CHROME%">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <script type="text/javascript" src="%PUBLIC_URL%/sql.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/sql%REACT_APP_CHROME%.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
